2005-12-07  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/protocol/{events.h,signals_slots.h}: Documentation updates.

2005-11-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itfile.cpp: Fixed bug [1333897]. The problem with
	infinite loop in `it_file::seek(...)' function has been solved by
	fixing `it_file::write_data_header(...)' function. See the bug
	report for more details. Thanks to Bjorn Furugard (luminosity) for
	having reported this problem and solution for it.

2005-11-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/gf2mat.{h,cpp}: Added `namespace itpp'. Fixed improper
	way of including header files. File comments addapted to the IT++
	standard.
	* itpp/itbase.h: Included `gf2mat.h'.
	* tests/Makefile.am: Commented out gf2mat_test program, since it
	is prepared in a different way than the standard IT++ testing
	programs.

2005-11-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/channel.cpp: fixed two minor bugs in COST channels'
	specifications

2005-11-23  Erik Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/base/gf2mat.{h,cpp}: added a new GF2 matrix module
	* tests/gf2mat_test.cpp: added a test program for GF2 matrix
	module
	
2005-11-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Removed some cpu-specific optimise flags from
	CXXFLAGS. The default optimisation is `-O2'. When using GCC compiler
	CXXFLAGS is extended with `-pipe -fomit-frame-pointer'. Moreover,
	`--with-cpu' switch has been renamed to `--with-march', which is
	more intuitive.
	* INSTALL, doc/local/installation.doc: Documentation updated due
	to the changes in `configure.ac'.

2005-11-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/error_counters.{h.cpp}: Fixed a bug in the BLERC
	counter, which caused that errors were not measured if the
	blocksize was longer then the minimum length of input bit vectors.
	Cosmetics changes in the BERC class.
